# rust_garage_opener

./: .gitignore  Cargo.toml  Dockerfile  Makefile.in  README.md  asset-manifest.json  configure.ac  index.html  local_run.sh  precache-manifest.88f9647fde0e8aaa83f5e0c19476d3ce.js  precache-manifest.8e7d0fb8ac9f4894bf0f7d2f55d55090.js  precache-manifest.96faa2726eb822f205a68eb09c7b85c7.js  service-worker.js
docker/: build_script.sh
frontend/: package-lock.json  package.json
frontend/src/: App.js  DoorStatusView.js  GarageOpenerContext.js  OpenCloseForm.js  RelayButton.js  SetupDialog.js  withGarageOpenerContext.js  withSnackbar.js
frontend/src/pb/: garage_opener_grpc_web_pb.js  garage_opener_pb.js
proto/: garage_opener.proto
server/: Cargo.toml  build.rs  garageopener-server.service
server/DEBIAN/: control
server/src/: client.rs  garage_cli_main.rs  server.rs
static/js/: 2.244cb53f.chunk.js  2.244cb53f.chunk.js.map  main.26408e4c.chunk.js  main.26408e4c.chunk.js.map  main.9c8806e8.chunk.js  main.9c8806e8.chunk.js.map  main.d449c09f.chunk.js  main.d449c09f.chunk.js.map  runtime-main.3034060d.js  runtime-main.3034060d.js.map  runtime-main.bb321903.js  runtime-main.bb321903.js.map
