[package]
name = "garage_opener"
version = "0.1.0"
authors = ["jdollar <dollarhidejoel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "garageopener-server"
path = "src/server.rs"

[[bin]]
name = "garageopener-client"
path = "src/client.rs"

[[bin]]
name = "garageopener-cli"
path = "src/garage_cli_main.rs"

[dependencies]
tonic = "0.2"
prost = "0.6"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "0.2", features = ["macros", "sync", "stream", "time"] }

async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
gpio-cdev = "0.2"
quicli = "0.4.0"
structopt = "0.2"

[build-dependencies]
tonic-build = "0.2"
